--- a/changes.txt
+++ b/changes.txt
@@ -27,7 +27,9 @@
 * 1.0.2
 ** Language:
 ** Features:
-- --use-gitgrep fallse back to --use-coccigrep for a non-git repository.
+- --use-gitgrep falls back to --use-coccigrep for a non-git repository.
+- ocaml coccilib allows propagating identifiers, expressions, statements,
+  and listlens to subsequent matching rules
 ** Bugfix:
 - Iso: allow mixed for model for the case where the model is just a metavar
   Thanks to Kris Borer for reporting the problem
