ocaml script metavars with environments, see test case

--- a/changes.txt
+++ b/changes.txt
@@ -29,7 +29,7 @@
 ** Features:
 - --use-gitgrep falls back to --use-coccigrep for a non-git repository.
 - ocaml coccilib allows propagating identifiers, expressions, statements,
-  and listlens to subsequent matching rules
+  listlens, and positions to subsequent matching rules
 ** Bugfix:
 - Iso: allow mixed for model for the case where the model is just a metavar
   Thanks to Kris Borer for reporting the problem
