--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -378,6 +378,19 @@ rule that declares an identifier metavariable with the name {\tt
   alloc=kmalloc}.  There should not be space around the {\tt =}.  An
 example is in {\tt demos/vm.cocci} and {\tt demos/vm.c}.
 
+It is possible to give an identifier metavariable a list of constraints
+that it should or should not be equal to.  If the constraint is a list of
+(unquoted) strings, then the value of the metavariable should be the same
+as one of the strings, in the case of an equality constraint, or different
+from all of the strings, in the case of an inequality constraint.  It is
+also possible to include inherited identifier metavariables among the
+constraints.  In the case of a positive constraint, things work in the same
+way, but not with respect to the inherited value of the metavariable.  On
+the other hand, an inequality constraint does not work so well, because the
+only value available is the one available in the ciurrent environment.  If
+the proposed value is different from the one in teh current environment,
+but perhaps the same as the one in some other environment, the match will
+still succeed.
 
 \paragraph*{Warning:} Each metavariable declaration causes the declared
 metavariables to be immediately usable, without any inheritance
