docs/manual/cocci_syntax.tex: ix typos

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -387,8 +387,8 @@ also possible to include inherited identifier metavariables among the
 constraints.  In the case of a positive constraint, things work in the same
 way, but not with respect to the inherited value of the metavariable.  On
 the other hand, an inequality constraint does not work so well, because the
-only value available is the one available in the ciurrent environment.  If
-the proposed value is different from the one in teh current environment,
+only value available is the one available in the current environment.  If
+the proposed value is different from the one in the current environment,
 but perhaps the same as the one in some other environment, the match will
 still succeed.
 
