Coccinelle grammar: fix typo.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -285,7 +285,7 @@ is found in demos/format.cocci.
 
 Assignment (resp. binary) operator metavariables match any assignment
 (resp. binary) operator. The list of operators that can be matched can
-be restrected by adding an operator constraint, i.e. a list of accepted
+be restricted by adding an operator constraint, i.e. a list of accepted
 operators.
 
 Other kinds of metavariables can also be attached using \texttt{@} to any
