Coccinelle grammar: replace unresolved symbol binary_op by bin_op.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -221,8 +221,8 @@ the same, but for structure fields.
   \CASE{\NT{id} \OPT{ = \NT{binop\_contraint}}}
 
   \RULE{\rt{binop\_contraint}}
-  \CASE{\mth{\{}\NT{COMMA\_LIST}\mth{(}\NT{binary\_op}\mth{)}\mth{\}}}
-  \CASE{\NT{binary\_op}}
+  \CASE{\mth{\{}\NT{COMMA\_LIST}\mth{(}\NT{bin\_op}\mth{)}\mth{\}}}
+  \CASE{\NT{bin\_op}}
 \end{grammar}
 
 A metavariable declaration local idexpression v means that v is restricted
