Drop support of OCaml 3.11.
There is a bug in OCaml 3.12.2 that prevents to produce a native cde
version of coccinelle. Hence drop support or OCaml3.11 completely
so that a native-code version of Coccinelle can be produced for all
supported versions of OCaml.

--- a/changes.txt
+++ b/changes.txt
@@ -31,6 +31,8 @@
 - Drop Unique
 ** Features:
 - Removed the extlib and sexp bundles which were not used any more.
+- Drop support for OCaml 3.11 which did not allow to compile coccinelle in
+  native code
 ** Bugfix:
 - Allow virtual variable definition to contain an =.
 * 1.0.2
