cocci_syntax.tex: rename an occurrence of the script_metadecl rule.
The grammar defines the script_metadecl rule and then extends it
in the case of OCaml scripts.

The extension had the same name than the main rule, which is intiutively
okay but made Hevea complain.

The OCaml-specific extenson is renamed to script_metadecl'.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -495,7 +495,7 @@ In an ocaml script, the following extended form of \textit{script\_metadecl}
 may be used:
 
 \begin{grammar}
-  \RULE{\rt{script\_metadecl}}
+  \RULE{\rt{script\_metadecl'}}
   \CASE{(\T{id},\T{id}) <{}< \T{rulename\_id}.\T{id} ;}
   \CASE{\T{id} <{}< \T{rulename\_id}.\T{id} ;}
   \CASE{\T{id} ;}
