cocci_syntax.tex: fix case of an occurrence of OCaml.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -491,7 +491,7 @@ Python, the assignment of such a metavariable $x$ should refer to the
 metavariable as {\tt coccinelle.\(x\)}.  Examples are in the files
 \texttt{demos/pythontococci.cocci} and \texttt{demos/camltococci.cocci}.
 
-In an ocaml script, the following extended form of \textit{script\_metadecl}
+In an OCaml script, the following extended form of \textit{script\_metadecl}
 may be used:
 
 \begin{grammar}
