Fixed typo, noted by Joe Perches

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -229,7 +229,7 @@ A metavariable declaration local idexpression v means that v is restricted
 to be a local variable.  If it should just be a variable, but not
 necessarily a local one, then drop local.  A more complex description of a
 location, such as a->b is considered to be an expression, not an
-ideexpression.
+idexpression.
 
 Constant is for constants, such as 27.  But it also considers an identifier
 that is all capital letters (possibly containing numbers) as a constant as
