Print metavariables properly for script code

--- a/changes.txt
+++ b/changes.txt
@@ -31,6 +31,7 @@
 - Removed the extlib and sexp bundles which were not used any more.
 - Drop support for OCaml 3.11 which did not allow to compile coccinelle in
   native code
+- Print metavariables properly for script code.
 ** Bugfix:
 - Allow virtual variable definition to contain an =.
 * 1.0.2
