--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.2~15.04npalix1) vivid; urgency=medium
+
+  * New release 1.0.2
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Thu, 10 Sep 2015 00:06:13 +0000
+
 coccinelle (1.0.2~14.04npalix1) trusty; urgency=medium
 
   * New release 1.0.2
