--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.2~14.04npalix2) trusty; urgency=medium
+
+  * New release 1.0.2
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Sun, 13 Sep 2015 06:22:58 +0000
+
 coccinelle (1.0.2~14.04npalix1) trusty; urgency=medium
 
   * New release 1.0.2
