spgen: rename sgen to spgen
This is to avoid conflicts with an existing tool called sgen.
(also meant for clearer naming around its purpose, but I'm not sure this has
been achieved)

--- a/tools/spgen/documentation/documentation.tex
+++ b/tools/spgen/documentation/documentation.tex
@@ -15,14 +15,14 @@
 % header
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead[L]{\texttt{sgen} documentation}
+\fancyhead[L]{\texttt{spgen} documentation}
 \fancyhead[R]{INRIA/LIP6 \today}
 
 % urls
 \usepackage{hyperref}
 \hypersetup{pdfborder = {0 0 0}} %remove link borders
 
-\title{\textbf{Documentation for \texttt{sgen}}}
+\title{\textbf{Documentation for \texttt{spgen}}}
 \date{\today}
 \author{Chi Pham}
 
