configure.ac: camlp4 is needed only to compile the bundled version of pycaml.

--- a/changes.txt
+++ b/changes.txt
@@ -43,6 +43,8 @@
 ** Bugfix:
 - Allow virtual variable definition to contain an =.
 - Improvement when exists rule contains when forall.
+- The presence of camlp4 is checked only when needed (to compile the pycaml
+  bundle)
 * 1.0.2
 ** Language:
 ** Features:
