--- a/changes.txt
+++ b/changes.txt
@@ -40,6 +40,7 @@
 - Add some support for MetaStmtList.  Allowed at top level of {}.
 ** Bugfix:
 - Allow virtual variable definition to contain an =.
+- Improvement when exists rule contains when forall.
 * 1.0.2
 ** Language:
 ** Features:
