--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -649,7 +649,7 @@ commands.}
 \subsection{Controlling the execution of Coccinelle}
 
 \normal{-{}-timeout $\langle$int$\rangle$}{ The maximum time in seconds for
-  processing a single file.}
+  processing a single file.  A timeout of 0 is no timeout.}
 
 \rare{-{}-max $\langle$int$\rangle$}{This option informs Coccinelle of the
   number of instances of Coccinelle that will be run concurrently.  This
