--- a/changes.txt
+++ b/changes.txt
@@ -22,13 +22,18 @@
 - typedefs from C code should not be used before their point of inference
   (saved_typedefs in cprogram_of_file)
 
+* 1.0.5
+** Language:
+** Features:
+** Bugfix:
+- Don't complain about unreferenced variables in ungenerated rules
 * 1.0.4
 ** Language:
 - Length for statement list metavariables
 ** Features:
 - file in declaration for depends on constraints
 ** Bugfix:
-   - build system: delete pregenerated parsers if menhir is installed
+- build system: delete pregenerated parsers if menhir is installed
 * 1.0.3
 ** Language:
 - Conjunction (analogous to disjunction)
