added --file-groups option

--- a/changes.txt
+++ b/changes.txt
@@ -25,6 +25,7 @@
 * 1.0.5
 ** Language:
 ** Features:
+- addition of --file-groups option
 ** Bugfix:
 - Don't complain about unreferenced variables in ungenerated rules
 * 1.0.4
