--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -432,7 +432,8 @@ have type bool.  The script code can be parameterized by any inherited
 metavariables.  It is implicitly parameterized by the metavariable being
 declared.  In the script, the inherited variable parameters are referred to
 by their variable names, without the associated rule name.  The variable
-being declared is also referenced by its name.  An example is in
+being declared is also referenced by its name.  All parameters, except
+position variables, have their string representation.  An example is in
 demos/parcon.cocci.
 
 A declaration of a name as a typedef extends through the rest of the
