position script constraints

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -434,7 +434,7 @@ declared.  In the script, the inherited variable parameters are referred to
 by their variable names, without the associated rule name.  The variable
 being declared is also referenced by its name.  All parameters, except
 position variables, have their string representation.  An example is in
-demos/parcon.cocci.
+demos/poscon.cocci.
 
 A declaration of a name as a typedef extends through the rest of the
 semantic patch.  It is not required, and it will cause a parse error, to
